# seavious

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  sonar-project.properties  vcpkg.json
.github/: dependabot.yml
.github/workflows/: sonarcloud.yml
assets/audio/: boss1_drums_bass.xm  boss1_theme_a.xm  boss1_theme_b.xm  boss2_theme_a.xm  stage1_drums_bass.xm  stage1_theme_a.xm  stage1_theme_b.xm  stage2_theme_a.xm
assets/stages/: stage1.txt  stage2.txt  stage2_terrain.txt  stage3.txt
assets/tiles/art-templates/: stage2-common-coasts.md
docs/: architecture.md  assets-and-audio.md  development.md  game-design.md  stage-authoring.md  terrain-rendering.md
src/: assets.c  assets.h  audio.c  audio.h  boss.c  boss.h  game_render.c  game_render.h  game_state.c  game_state.h  game_update.c  game_update.h  gameplay.c  gameplay.h  input.c  input.h  main.c  menu.c  menu.h  present.c  present.h  screenshot.c  screenshot.h  seavious.rc  settings.c  settings.h  stage.c  stage.h  stage1_data.c  stage2_data.c  stage3_data.c  stage_data.h  title.c  title.h  wreck_visual.c  wreck_visual.h
tests/: boss_tests.c  gameplay_tests.c  screenshot_tests.c  settings_tests.c  stage_tests.c  test_icon_asset.py  test_pngread.py  test_sfx_assets.py  test_sprite_assets.py  test_stage_assets.py  test_stage_table.py  test_terrain_art_templates.py  test_terrain_feature_atlas.py  test_terrain_ground_tile.py  test_xm_assets.py  title_tests.c
tools/: compile-stage.py  copy-assets.cmake  export-terrain-art-templates.py  gen-casemate.py  gen-drone-bunker.py  gen-exe-icon.py  gen-fortress-atoll.py  gen-fortress-core.py  gen-fortress-gate.py  gen-fortress-weapons.py  gen-grid-image.ps1  gen-gunship.py  gen-interceptor.ps1  gen-islet-ridge.py  gen-leviathan.py  gen-mine.ps1  gen-mobile-platform.py  gen-mortar-battery.py  gen-music-xm.py  gen-ocean-overlay.ps1  gen-ocean-tile.ps1  gen-player-ship.ps1  gen-relay-node.ps1  gen-sfx.py  gen-skimmer-drone.ps1  gen-stage-table.py  gen-stage1-xm.py  gen-terrain-feature-atlas.py  gen-terrain-ground-tile.py  gen-terrain-hardpoint.py  gen-terrain-tile-atlas.py  gen-title-logo.py  gen-tracking-turret.py  genlib.py  gridpng.py  pngread.py
vcpkg-overlays/raylib/: portfile.cmake
